Fix issue with horizontal scrolling caused by navigation in mobile view.

--- a/src/styles/_navigation.sass
+++ b/src/styles/_navigation.sass
@@ -32,12 +32,10 @@ $mobile-padding: 2rem 2rem
     &.hide-nav
       opacity: 0
       pointer-events: none
-      transform: translateX(100px)
 
     &.show-nav
       opacity: 1
       pointer-events: initial
-      transform: translateY(0)
 
   a
     font-size: 0.8rem
